# pixi-build-ros-issue-repro

./: README.md  pixi.toml
ros-pkg-1/: package.xml
ros-pkg-2/: package.xml
